# rust-exercises

./: .editorconfig  .gitignore  Cargo.toml  README.md
problems/problem1/: Cargo.toml  README.md
problems/problem1/src/: lib.rs
problems/problem2/: Cargo.toml  README.md
problems/problem2/src/: lib.rs  main.rs
problems/problem3/: Cargo.toml  README.md
problems/problem3/src/: game.rs  game_element.rs  lib.rs  main.rs
problems/problem4/: Cargo.toml  README.md
problems/problem4/src/: lib.rs
problems/problem5/: Cargo.toml  README.md
problems/problem5/src/: lib.rs  main.rs
problems/problem6/: Cargo.toml  README.md
problems/problem6/src/: cards.rs  game.rs  hand.rs  lib.rs  main.rs
problems/problem7/: Cargo.toml  README.md
problems/problem7/src/: lib.rs
problems/problem8/: Cargo.toml  README.md
problems/problem8/src/: cafe.rs  lib.rs  main.rs  visitor.rs
problems/problem8/tests/: integration.rs
src/: exercise1.rs  lib.rs  main.rs
