[package]
name = "exercises"
version = "0.1.0"
authors = ["Eric Rasmussen <ericrasmussen@gmail.com>"]
edition = "2018"

[[bin]]
name = "exercises"

[workspace]
members = [
  "problems/problem1",
  "problems/problem2",
  "problems/problem3",
  "problems/problem4",
  "problems/problem5",
  "problems/problem6",
  "problems/problem7",
  "problems/problem8"
]

[dependencies]
